# multi-ownable

./: .gitignore  Cargo.toml
multi-ownable/: Cargo.toml  README.md
multi-ownable/src/: lib.rs  macros.rs
test-contract/: Cargo.toml
test-contract/src/: lib.rs
test-contract/tests/: test_multi_ownable.rs
